make it better 1

--- a/signup.html
+++ b/signup.html
@@ -17,7 +17,7 @@
 
 <body class="text-center">
   <form action="/" class="form-signin w-100 m-auto" method="post">
-    <img class="mb-4" src="images/codeing creation.jpg" alt="" width="72" height="57">
+    <img class="mb-4" src="images/logo.jfif" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">SIGNUP FORM</h1>
     <input type="text" name="fname" class="form-control top form-floating" placeholder="First Name" required autofocus>
     <input type="text" name="lname" class="form-control middle form-floating" placeholder="Last Name">
